# VeriGenLLM-v2

./: .gitignore  Dockerfile  Dockerfile.ci  README.md  constants.py  main.py  pyproject.toml
.github/workflows/: main.yaml
dataset/: README.md
dataset/evals/: claude-opus-4-20250514.json  codellama-7b-instruct.json  deepseek-coder-7b-instruct-v1.5.json  gpt-4.1.json  qwen2.5-coder-7b-instruct.json
dataset/evals/comparisons_pass_10/: Claude_Opus4_table.csv
dataset/evals/comparisons_pass_10_17_questions/: Claude_Opus4_table.csv  CodeLlama_7B_Ins_(no-sm)_table.csv  Deepseek_Coder_7B_Ins_v1.5_table.csv  OpenAI_GPT4.1_table.csv  Qwen_Coder2.5_7B_Instruct_table.csv
dataset/evals/comparisons_pass_5/: Deepseek_Coder_7B_Ins_v1.5_table.csv  OpenAI_GPT4.1_table.csv
dataset/evals/comparisons_pass_8/: CodeLlama_7B_Ins_(no-sm)_table.csv  Qwen_Coder2.5_7B_Instruct_table.csv
dataset/evals/multi_comparison/: Claude_Opus4_table.csv  CodeLlama_7B_Ins_(no-sm)_table.csv  Deepseek_Coder_7B_Ins_v1.5_table.csv  OpenAI_GPT4.1_table.csv  Qwen_Coder2.5_7B_Instruct_table.csv
dataset/models/: selected-prompts.json
dataset/models/claude/: claude-response-n10.json
dataset/models/codellama/: codellama-response-n10.json
dataset/models/deepseek-coder/: deepseek-coder-response-n10.json
dataset/models/gemini/: gemini-response-n6.json
dataset/test/example_01/: solution.v  (+2 more)
docs/: README.md  commercial-models.md  evaluation-metrics.md  hardware.md  oss-models.md  setup.md
notebook/: README.md  eval-analysis.ipynb
scripts/: cd.sh  check_docker_instance.sh  ci.sh  cloud.sh  create-gc-a2instance.sh  starter.sh
secrets/: README.md
src/: README.md  algo.py  bucket.py  constants.py  evals.py  gcp.py  logger.py  models.py  ppo.py  reward.py  rewards.py  rl_policy.py  rlft.py  wandb_logger.py
tests/: README.md  __init__.py  conftest.py  conftests.py  test_evals.py  test_gcp.py  test_llm_prompts.py  test_models.py  test_ppo.py  test_reward.py  test_rewards.py  test_rlft.py  test_wire_assign_testbench.py  test_wire_declare_testbench.py
(+428 files in other folders)
