[project]
name = "verigenllm-v2"
version = "0.1.0"
description = "Enhanced LLM version of the previous research: https://dl.acm.org/doi/full/10.1145/3643681"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.60.0",
    "einops>=0.8.1",
    "google-api-core>=2.25.1",
    "google-cloud-storage>=3.2.0",
    "google-genai>=1.28.0",
    "huggingface-hub>=0.34.3",
    "ipykernel>=6.30.0",
    "matplotlib>=3.9.4",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
