[project]
name = "verigenllm-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "anthropic>=0.64.0",
    "google-cloud-storage>=3.3.0",
    "google-genai>=1.30.0",
    "huggingface-hub>=0.34.4",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
